rusty-cdk-macros/tests/fails/lifecycle_object_sizes_not_numbers.rs
use rusty_cdk_macros::lifecycle_object_sizes;

fn example() {
    let sizes = lifecycle_object_sizes!(a, b);
}

fn main() {}
